--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "serve": "^14.1.2",
+    "serve-build": "^0.1.0",
     "swiper": "^8.4.5",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
