--- a/package.json
+++ b/package.json
@@ -70,5 +70,9 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
+  },
+  "engines": {
+    "node": "18.16.0",
+    "npm": "9.6.5"
   }
 }
